# RPS_game

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/: pull_request_template.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  errors.py  main.py  models.py  utils.py
backend/app/core/: connection_manager.py  constants.py  lifecycle.py  match_history.py  rate_limit.py  round_runner.py  security.py  state_store.py
backend/app/game/: cpu.py  draw_resolution.py  engine.py  start_conditions.py
backend/app/game/rules/: __init__.py  boss_battle.py  minority.py  tournament.py
backend/app/routers/: rooms.py  ws.py
backend/tests/: conftest.py  test_boss_battle.py  test_config.py  test_cpu.py  test_draw_resolution.py  test_engine.py  test_lifecycle.py  test_match_history.py  test_minority.py  test_public_config.py  test_rate_limit.py  test_rooms_api.py  test_rooms_matches_api.py  test_round_runner.py  test_round_runner_boss.py  test_round_runner_minority.py  test_round_runner_tournament.py  test_start_conditions.py  test_state_store.py  test_tournament.py  test_utils.py  test_ws.py  test_ws_boss.py  test_ws_cpu.py  test_ws_lifecycle.py  test_ws_minority.py  test_ws_r1.py  test_ws_resilience.py  test_ws_round.py  test_ws_special_rules.py  test_ws_tournament.py
deploy/: Caddyfile.example  cloudflared.config.yml.example  start-demo.ps1.example
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY.md  REQUIREMENTS.md  SCREENS.md  TEMPLATE_NOTES.md  TODO.md
frontend/: README.md  eslint.config.js  index.html  (+6 more)
(+72 files in other folders)
