[project]
name = "rps-backend"
version = "0.1.0"
description = "Realtime Rock-Paper-Scissors backend (FastAPI + WebSocket + MongoDB)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pymongo>=4.9.0",
    "pydantic>=2.9.0",
    "python-decouple>=3.8",
]

[project.optional-dependencies]
# Redis is NOT required for the MVP. It is only needed when scaling out
# (horizontal scale / multiple workers) to share game state across processes
# and provide WebSocket pub/sub. See ARCHITECTURE.md §1.
redis = [
    "redis>=5.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
